fivewheel version for 2020

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>super-8-swerve-drive</name>
-	<comment>Project super-8-swerve-drive created by Buildship.</comment>
+	<name>fivewheel</name>
+	<comment>Project fivewheel created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
