--- a/.gitignore
+++ b/.gitignore
@@ -48,13 +48,13 @@
 .mtj.tmp/
 
 # Package Files #
-#*.jar
-#*.war
-#*.nar
-#*.ear
-#*.zip
-#*.tar.gz
-#*.rar
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -151,10 +151,11 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # # VS Code Specific Java Settings
-#.classpath
-#.project
-#.settings/
+.classpath
+.project
+.settings/
 bin/
+imgui.ini
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
